--- a/Servico/nbproject/genfiles.properties
+++ b/Servico/nbproject/genfiles.properties
@@ -6,3 +6,4 @@ build.xml.stylesheet.CRC32=651128d4@1.75.1.1
 nbproject/build-impl.xml.data.CRC32=04db80b8
 nbproject/build-impl.xml.script.CRC32=b81877ae
 nbproject/build-impl.xml.stylesheet.CRC32=99ea4b56@1.75.1.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=6608c2cf
